--- a/src/views/body/farmacia.ejs
+++ b/src/views/body/farmacia.ejs
@@ -21,7 +21,7 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-        <a href= <%= controlePaginas.home %> >
+        <a href="/home"> >
               <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
@@ -40,7 +40,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/body/formulario.ejs">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -70,11 +70,11 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="variedades.html">
+        <a class="tagA_segundo_cabecalho"  href="/home/variedades">
              <p class="mercado"><strong>Variedades</strong>  </p> 
         </a>
 
-        <a class="tagA_segundo_cabecalho"  href="pet.html">
+        <a class="tagA_segundo_cabecalho"  href="/home/pet">
              <p class="pet"><strong>Espaço pet</strong> </p>
         </a>
 
@@ -97,17 +97,17 @@
         <li class="lista_label_hambuerguer">
           Variedades
            <ul >
-            <a href="/variedades.html"> <li>Eletrônicos</li></a>
-            <a href="/variedades.html"> <li>Móveis</li></a>
-            <a href="/variedades.html"><li>Roupas</li></a>
+            <a href="/home/variedades"> <li>Eletrônicos</li></a>
+            <a href="/home/variedades"> <li>Móveis</li></a>
+            <a href="/home/variedades"><li>Roupas</li></a>
            </ul>
         </li>
 
         <li class="lista_label_hambuerguer" >Espaço pet
             <ul >
-              <a href="pet.html"> <li>Gatos</li></a>
-              <a href="pet.html"><li>Cachorros</li></a>
-              <a href="pet.html"><li>Diversos</li></a> 
+              <a href="/home/pet"> <li>Gatos</li></a>
+              <a href="/home/pet"><li>Cachorros</li></a>
+              <a href="/home/pet"><li>Diversos</li></a> 
             </ul>
         </li>
 
@@ -243,7 +243,7 @@
   <section class="footer_all">
   
     <article class="imagem_logo2">
-        <a href="/home.html">
+        <a href="/home">
             <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
         </a>
     </article>
