--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -10,8 +10,10 @@
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <!--esse script é gerado pelo fontawesome.com que gera icones -->
 
-    <link rel="stylesheet" href="css/formulario_header.css">
-    <link rel="stylesheet" href="css/formulario.css">
+    <link rel="stylesheet" href="/css/formulario_header.css">
+    <link rel="stylesheet" href="/css/formulario.css">
+    <link rel="stylesheet" href="/css/header.css">
+  
    
 </head>
 
@@ -23,14 +25,14 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo4">
-          <a href="home.html">
-              <img class="imagem_logo_img4" src="imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+          <a href="/home">
+              <img class="imagem_logo_img4" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </div>
 
       <form class="form_primeiro_cabecalho4" action="#" method="post">
 
-        <a class="botao4" id="button_entry"  href="#login">  <i class="fa-solid fa-right-to-bracket"></i></a> <p class="text_botao4">Entrar</p>
+        <a class="botao4" id="button_entry"  href="#login">  <i  class="fa-solid fa-right-to-bracket"></i></a> <p class="text_botao4">Entrar</p>
        <!--a tag "i" estou utilizando o icone do fontawesome.com -->
        <br>
        <section class="body_login" ></section>
@@ -58,15 +60,15 @@
          <article class="abas">
 
           
-            <a class="tagA_segundo_cabecalho"  href="variedades.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/variedades">
                    <p class="mercado"><strong>Variedades</strong>  </p> 
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="pet.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/pet">
                     <p class="pet"><strong>Espaço pet</strong> </p>
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="farmacia.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
               <p class="farmacia"><strong>Farmácia </strong> </p>
             </a>
 
@@ -178,8 +180,8 @@
 
 </body>
 
-<script src="js/formulario.js"></script>
-<script src="js/login.js"></script>
+<script src="/js/formulario.js"></script>
+<script src="/js/login.js"></script>
 
 </html>
 
