--- a/src/views/body/home.ejs
+++ b/src/views/body/home.ejs
@@ -9,11 +9,11 @@
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <!--esse script é gerado pelo fontawesome.com que gera icones -->
 
-    <link rel="stylesheet" href="/public/css/header.css">
-    <link rel="stylesheet" href="/public/css/footer.css">
-    <link rel="stylesheet" href="/public/css/body_home.css">
-    <link rel="stylesheet" href="/public/css/body_home_carrossel.css">
-    <link rel="stylesheet" href="/public/css/menu_hamburguer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/body_home.css">
+    <link rel="stylesheet" href="/css/body_home_carrossel.css">
+    <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -24,8 +24,8 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="./home.html">
-              <img class="imagem_logo_img" src="/public/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
+          <a href="./home">
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -43,7 +43,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -77,15 +77,15 @@
          <article class="abas">
 
           
-            <a class="tagA_segundo_cabecalho"  href="variedades.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/variedades">
                    <p class="mercado"><strong>Variedades</strong>  </p> 
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="pet.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/pet">
                     <p class="pet"><strong>Espaço pet</strong> </p>
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="farmacia.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
               <p class="farmacia"><strong>Farmácia </strong> </p>
             </a>
 
@@ -149,19 +149,19 @@
 
           <!--inicio slide imagens---------------------------------------------------------------------------------->
           <div class="slide first">
-              <img src="/public/img/imagem_carrossel_home.webp" alt="imagem 1">
+              <img src="/img/imagem_carrossel_home.webp" alt="imagem 1">
           </div>
 
           <div class="slide">
-            <img src="/public/img/carrosel-pet5.webp" alt="imagem 2">
+            <img src="/img/carrosel-pet5.webp" alt="imagem 2">
           </div>
 
           <div class="slide">
-            <img src="/public/img/carrossel_imagem3_farmacia.png" alt="imagem 3">
+            <img src="/img/carrossel_imagem3_farmacia.png" alt="imagem 3">
           </div>
 
           <div class="slide">
-            <img src="/public/img/carrossell_imagem4_farmacia.png" alt="imagem 4">
+            <img src="/img/carrossell_imagem4_farmacia.png" alt="imagem 4">
           </div>
           <!--fim slide imagens--------------------------------------------------------------------------------------->
 
@@ -198,19 +198,19 @@
       <section class="elementoUm_article" >
 
           <div class="elementoUm_article_div" >
-              <img class = "img_elementoUm_article_div" src="/public/img/imagem_variedades1.png" alt="">
+              <img class = "img_elementoUm_article_div" src="/img/imagem_variedades1.png" alt="">
               <p> Samsung S20 128GB</p>
               <P>R$ 1.799,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoUm_article_div" >
-              <img class = "img_elementoUm_article_div" src="/public/img/imagem_variedades2.png" alt="">
+              <img class = "img_elementoUm_article_div" src="/img/imagem_variedades2.png" alt="">
               <p>Mochila Hang Loose</p>
               <P>R$ 159,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoUm_article_div" id="block_4_imagens_space">
-              <img class = "img_elementoUm_article_div" src="/public/img/imagem_variedades3.png" alt="">
+              <img class = "img_elementoUm_article_div" src="/img/imagem_variedades3.png" alt="">
               <p>Xiaomi mi robot Vacuum</p>
               <P>R$ 2.910,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
@@ -230,19 +230,19 @@
       <section class="elementoDois_article" >
 
           <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="/public/img/tigela_gato.webp" alt="">
+              <img class = "img_elementoDois_article_div" src="/img/tigela_gato.webp" alt="">
               <p>Tigela para gato</p>
               <P>R$ 20,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="/public/img/casinhaPet.jpg" alt="">
+              <img class = "img_elementoDois_article_div" src="/img/casinhaPet.jpg" alt="">
               <p>Casinha pet</p>
               <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" id="block_4_imagens_space">
-              <img class = "img_elementoDois_article_div" src="/public/img/caminhaPet.webp" alt="">
+              <img class = "img_elementoDois_article_div" src="/img/caminhaPet.webp" alt="">
               <p>Caminha pet</p>
               <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
@@ -262,19 +262,19 @@
   <section class="elementoTres_article" >
 
       <div class="elementoTres_article_div" >
-          <img class = "img_elementoTres_article_div" src="/public/img/imagem_farmacia1.jpg" alt="">
+          <img class = "img_elementoTres_article_div" src="/img/imagem_farmacia1.jpg" alt="">
           <p>Dipirona 500mg ,240 comprimidos</p>
           <P>R$ 17,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
       </div>
 
       <div class="elementoTres_article_div" >
-          <img class = "img_elementoTres_article_div" src="/public/img/imagem_farmacia2.jpg" alt="">
+          <img class = "img_elementoTres_article_div" src="/img/imagem_farmacia2.jpg" alt="">
           <p>Paracetamol 750mg ,20 comprimidos</p>
           <P>R$ 19,70</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
       </div>
 
       <div class="elementoTres_article_div" id="block_4_imagens_space">
-          <img class = "img_elementoTres_article_div" src="/public/img/imagem_farmacia3.jpg" alt="">
+          <img class = "img_elementoTres_article_div" src="/img/imagem_farmacia3.jpg" alt="">
           <p>Novanoite 320mg , 10 comprimidos</p>
           <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
       </div>
@@ -292,8 +292,8 @@
   <section class="footer_all">
   
       <article class="imagem_logo2">
-          <a href="home.html">
-              <img class="imagem2" src="/public/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+          <a href="/home">
+              <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </article>
   
@@ -365,8 +365,8 @@
     <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
     </div>-->
 
-<script src="/public/js/home.js"></script>
-<script src="/public/js/menu_hamburguer.js"></script>
+<script src="/js/home.js"></script>
+<script src="/js/menu_hamburguer.js"></script>
 </body>
 
 
