--- a/src/views/body/pet.ejs
+++ b/src/views/body/pet.ejs
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo Seven / Espaço pet</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/header.css">
-    <link rel="stylesheet" href="/public/css/body_pet_carrossel.css">
-    <link rel="stylesheet" href="/public/css/body_pet.css">
-    <link rel="stylesheet" href="/public/css/footer.css">
-    <link rel="stylesheet" href="/public/css/menu_hamburguer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/body_pet_carrossel.css">
+    <link rel="stylesheet" href="/css/body_pet.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -22,8 +22,8 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="home.html">
-              <img class="imagem_logo_img" src="/public/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
+          <a href="/home">
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -41,7 +41,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -71,13 +71,13 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="variedades.html">
+        <a class="tagA_segundo_cabecalho"  href="/home/variedades">
              <p class="mercado"><strong> Variedades</strong>  </p> 
         </a>
 
             <p class="pet" id ="pag_pet"><strong>Espaço pet </strong> </p>
 
-        <a class="tagA_segundo_cabecalho"  href="farmacia.html">
+        <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
             <p class="farmacia"><strong>Farmácia </strong> </p>
         </a>
 
@@ -139,19 +139,19 @@
 
           <!--inicio slide imagens---------------------------------------------------------------------------------->
           <div class="slide first">
-              <img  src="/public/img\carrosel-pet1.webp" alt="imagem 1">
+              <img  src="/img\carrosel-pet1.webp" alt="imagem 1">
           </div>
 
           <div class="slide">
-            <img  src="/public/img\carrosel-pet5.webp" alt="imagem 2">
+            <img  src="/img\carrosel-pet5.webp" alt="imagem 2">
           </div>
 
           <div class="slide">
-            <img  src="/public/img\carrosel-pet4.webp" alt="imagem 3">
+            <img  src="/img\carrosel-pet4.webp" alt="imagem 3">
           </div>
 
           <div class="slide">
-            <img src="/public/img\carrosel-pet2.webp" alt="imagem 4">
+            <img src="/img\carrosel-pet2.webp" alt="imagem 4">
           </div>
           <!--fim slide imagens--------------------------------------------------------------------------------------->
 
@@ -183,19 +183,19 @@
         <section class="elementoUm_article" >
 
             <div class="elementoUm_article_div" >
-                <img class = "img_elementoUm_article_div" src="/public/img\bolsaPet.jpg" alt="">
+                <img class = "img_elementoUm_article_div" src="/img\bolsaPet.jpg" alt="">
                 <p>Bolsa pet</p>
                 <P>R$ 140,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
             <div class="elementoUm_article_div" >
-                <img class = "img_elementoUm_article_div" src="/public/img\caminhaPet.webp" alt="">
+                <img class = "img_elementoUm_article_div" src="/img\caminhaPet.webp" alt="">
                 <p>Caminha pet</p>
                 <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
             <div class="elementoUm_article_div" id="block_4_imagens_space">
-                <img class = "img_elementoUm_article_div" src="/public/img\casinhaPet.jpg" alt="">
+                <img class = "img_elementoUm_article_div" src="/img\casinhaPet.jpg" alt="">
                 <p>Casinha pet</p>
                 <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
@@ -210,19 +210,19 @@
       <section class="elementoDois_article" >
 
           <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="/public/img\tigela_gato.webp" alt="">
+              <img class = "img_elementoDois_article_div" src="/img\tigela_gato.webp" alt="">
               <p>Tigela para gato</p>
               <P>R$ 20,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="/public/img\racao-gato.jpg" alt="">
+              <img class = "img_elementoDois_article_div" src="/img\racao-gato.jpg" alt="">
               <p>Ração para Gato</p>
               <P>R$ 50,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" id="block_4_imagens_space">
-              <img class = "img_elementoDois_article_div" src="/public/img\racao-premier-caes-adultos.webp" alt="">
+              <img class = "img_elementoDois_article_div" src="/img\racao-premier-caes-adultos.webp" alt="">
               <p>Ração premium</p>
               <P>R$ 80,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
@@ -241,8 +241,8 @@
   <section class="footer_all">
   
     <article class="imagem_logo2">
-        <a href="/home.html">
-            <img class="imagem2" src="/public/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+        <a href="/home">
+            <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
         </a>
     </article>
 
@@ -314,8 +314,8 @@
   <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
   </div>-->
 
-<script src="/public/js/pet.js"></script>
-<script src="/public/js/menu_hamburguer.js"></script>
+<script src="/js/pet.js"></script>
+<script src="/js/menu_hamburguer.js"></script>
 </body>
 
 
