--- a/src/views/body/variedades.ejs
+++ b/src/views/body/variedades.ejs
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo Seven / Mercado</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/body_variedades.css">
-    <link rel="stylesheet" href="/public/css/body_variedades_carrossel.css">
-    <link rel="stylesheet" href="/public/css/footer.css">
-    <link rel="stylesheet" href="/public/css/header.css">
-    <link rel="stylesheet" href="/public/css/menu_hamburguer.css">
+    <link rel="stylesheet" href="/css/body_variedades.css">
+    <link rel="stylesheet" href="/css/body_variedades_carrossel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/menu_hamburguer.css">
     
 </head>
 
@@ -22,8 +22,8 @@
     <section class="primeiro_cabecalho">
       
         <article class="imagem_logo">
-            <a href="home.html">
-                <img class="imagem_logo_img" src="/public/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
+            <a href="/home">
+                <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
             </a>
         </article>
      
@@ -41,7 +41,7 @@
          
             <form class="form_primeiro_cabecalho2" action="#" method="post">
               
-              <a class="botao2"  href="formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+              <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
                 <!--a tag "i" estou utilizando o icone do fontawesome.com -->
       
             </form>
@@ -73,11 +73,11 @@
 
            <p class="mercado" id ="pag_mercado"><strong>Variedades</strong> </p> 
            
-          <a class="tagA_segundo_cabecalho"  href="pet.html">
+          <a class="tagA_segundo_cabecalho"  href="/home/pet">
                <p class="pet"><strong>Espaço pet</strong> </p>
           </a>
 
-          <a class="tagA_segundo_cabecalho"  href="farmacia.html">
+          <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
                <p class="farmacia"><strong>Farmácia </strong> </p>
           </a>
 
@@ -141,19 +141,19 @@
 
           <!--inicio slide imagens---------------------------------------------------------------------------------->
           <div class="slide first">
-              <img  src="/public/img/carrosel-variedades1.webp" alt="imagem 1">
+              <img  src="/img/carrosel-variedades1.webp" alt="imagem 1">
           </div>
 
           <div class="slide">
-            <img  src="/public/img/carrosel-variedades3.webp" alt="imagem 2">
+            <img  src="/img/carrosel-variedades3.webp" alt="imagem 2">
           </div>
 
           <div class="slide">
-            <img  src="/public/img/carrosel-variedades2.webp" alt="imagem 3">
+            <img  src="/img/carrosel-variedades2.webp" alt="imagem 3">
           </div>
 
           <div class="slide">
-            <img src="/public/img/carrosel-variedades4.webp" alt="imagem 4">
+            <img src="/img/carrosel-variedades4.webp" alt="imagem 4">
           </div>
           <!--fim slide imagens--------------------------------------------------------------------------------------->
 
@@ -185,19 +185,19 @@
         <section class="elementoUm_article" >
 
             <div class="elementoUm_article_div" >
-                <img class = "img_elementoUm_article_div" src="/public/img/imagem_variedades1.png" alt="">
+                <img class = "img_elementoUm_article_div" src="/img/imagem_variedades1.png" alt="">
                 <p> Galaxy S20 ,Samsung 128GB</p>
                 <P>R$ 1.799,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
             <div class="elementoUm_article_div" id="div2" >
-                <img class = "img_elementoUm_article_div"  src="/public/img/imagem_variedades3.png" alt="">
+                <img class = "img_elementoUm_article_div"  src="/img/imagem_variedades3.png" alt="">
                 <p>Aspirador Xiaomi mi robot Vacuum</p>
                 <P>R$ 2.910,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
             <div class="elementoUm_article_div" id="div3">
-                <img class = "img_elementoUm_article_div" src="/public/img/imagem_variedades5.png" alt="">
+                <img class = "img_elementoUm_article_div" src="/img/imagem_variedades5.png" alt="">
                 <p>Headphone Sony WH-1000XM4</p>
                 <P>R$ 1.799,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
@@ -213,19 +213,19 @@
       <section class="elementoDois_article" >
 
           <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="/public/img/imagem_variedades6png.jpg" alt="">
+              <img class = "img_elementoDois_article_div" src="/img/imagem_variedades6png.jpg" alt="">
               <p>Camisa Liverpool II 21/22</p>
               <P>R$ 299,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" id="div2">
-              <img class = "img_elementoDois_article_div" id="imagem2"src="/public/img/imagem_variedades4.png" alt="">
+              <img class = "img_elementoDois_article_div" id="imagem2"src="/img/imagem_variedades4.png" alt="">
               <p>Tênis Adidas Response SR</p>
               <P>R$ 399,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" id="div3">
-              <img class = "img_elementoDois_article_div" src="/public/img/imagem_variedades2.png" alt="">
+              <img class = "img_elementoDois_article_div" src="/img/imagem_variedades2.png" alt="">
               <p>Mochila Hang Loose</p>
               <P>R$ 159,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
@@ -244,8 +244,8 @@
     <section class="footer_all">
   
       <article class="imagem_logo2">
-          <a href="home.html">
-              <img class="imagem2" src="/public/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+          <a href="/home">
+              <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </article>
   
@@ -317,8 +317,8 @@
     <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
     </div>-->
 
- <script src="/public/js/variedades.js"></script>
- <script src="/public/js/menu_hamburguer.js"></script>
+ <script src="/js/variedades.js"></script>
+ <script src="/js/menu_hamburguer.js"></script>
 </body>
 
 
