--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -23,9 +23,9 @@
 
     <section class="primeiro_cabecalho">
 
-      <div class="imagem_logo">
+      <div class="imagem_logo4">
           <a href="/home">
-              <img class="imagem" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  width="105%" height="100px" >
+              <img class="imagem_logo_img4" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"   >
           </a>
       </div>
 
@@ -54,7 +54,7 @@
       <section class="segunda_cabecalho">
 
         <article class="link">
-          <i class="fa-solid fa-list"></i> <p class="texto_nav"> Navegue pelo site</p> 
+          <i class="fa-solid fa-list"></i> <p class="texto_nav"> Navegue aqui</p> 
         </article>
 
          <article class="abas">
@@ -180,8 +180,8 @@
 
 </body>
 
-<script src="js/formulario.js"></script>
-<script src="js/login.js"></script>
+<script src="/js/formulario.js"></script>
+<script src="/js/login.js"></script>
 
 </html>
 
