--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -89,13 +89,13 @@
         <h2>Crie uma conta </h2>
       </div>
 
-    <form action="" id ="form" class="form">
+    <form action="/home/formulario" method="post" id ="form" class="form">
 
 
         <div class="form-control">
 
           <label for="username">Nome de usuário</label>
-          <input type="text" id="username" placeholder="Digite seu nome de usuário..."/>
+          <input type="text" name="username" id="username" placeholder="Digite seu nome de usuário..."/>
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -108,7 +108,7 @@
         <div class="form-control">
 
           <label for="email">Email</label>
-          <input type="text" id="email" placeholder="Digite seu email.." />
+          <input type="text" name="email" id="email" placeholder="Digite seu email.." />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -119,7 +119,7 @@
         <div class="form-control">
 
           <label for="cpf">CPF</label>
-          <input type="text" id="cpf" placeholder="Digite seu CPF.." />
+          <input type="text" name="cpf" id="cpf" placeholder="Digite seu CPF.." />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -129,7 +129,7 @@
         <div class="form-control">
 
           <label for="telefone">Telefone</label>
-          <input type="text" id="telefone" placeholder="Digite seu número.." size="20" minlength="9" maxlength="14" />
+          <input type="text" name="telefone" id="telefone" placeholder="Digite seu número.." size="20" minlength="9" maxlength="14" />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -139,7 +139,7 @@
         <!-- campo da senha e confirmação inicio------------------------------------------------------------------------------>
         <div class="form-control">
           <label for="password">Senha</label>
-          <input type="password" id="password" placeholder="Digite sua senha..."/>
+          <input type="password" name="password" id="password" placeholder="Digite sua senha..."/>
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -148,7 +148,7 @@
 
         <div class="form-control">
           <label for="password-confirmation">Confirmação de senha</label>
-          <input type="password"  id="password-confirmation" placeholder="Digite sua senha novamente..."/>
+          <input type="password"  name="passwordConfirmation"id="password-confirmation" placeholder="Digite sua senha novamente..."/>
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -180,7 +180,7 @@
 
 </body>
 
-<script src="/js/formulario.js"></script>
+
 <script src="/js/login.js"></script>
 
 </html>
