--- a/src/views/body/home.ejs
+++ b/src/views/body/home.ejs
@@ -289,79 +289,7 @@
 
   </main>
 
-
- <footer>
-   
-  <section class="footer_all">
-  
-    <article class="imagem_logo2">
-        <a href="/home">
-            <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
-        </a>
-    </article>
-
-  <!--Primeiro Artico---------------------------------------------------------------------------------------------->
-  <article class="lista_footer1">
-
-      <label class="label_footer" for="">Sobre o Grupo Seven </label>
-      <ul>
-          <li type = "none">
-            <a class="lista" href="">Quem Somos </a>
-          </li>
-
-          <li type = "none">
-            <a class="lista" class="Lista" href="">Nossas Lojas </a>
-          </li>
-
-          <li type = "none">
-            <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
-          </li>
-
-          <li type = "none">
-            <a class="lista" href="">Dúvidas </a>
-          </li>
-      </ul>
-
-  </article>
-  <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
-
-  <!--Segundo Artico---------------------------------------------------------------------------------------------->
-  <article class="lista_footer2">
-
-    <label class="label_footer" for="">Central de Atendimento </label>
-    <ul>
-        <li type = "none">
-          <a class="lista"href="">Anucie Seu Produto Aqui </a>
-        </li>
-
-        <li type = "none">
-          <a class="lista" href="">Política de Vendas </a>
-        </li>
-
-        <li type = "none">
-          <a class="lista" href="">Troca e Devolução </a>
-        </li>
-
-        <li type = "none">
-          <a class="lista" href="">Prazo e Entrega </a>
-        </li>
-    </ul>
-
-  </article>
-<!--Segundo Artico---------------------------------------------------------------------------------------------->
-
-  <article class="icones_footer">
-
-    <a href=""><i id="icone_footer_img" class="fa-brands fa-facebook"></i></a>
-    <a href=""><i id="icone_footer_img" class="fa-brands fa-instagram"></i></a>
-    <a href=""><i id="icone_footer_img" class="fa-brands fa-twitter"></i></a>
-
-  </article>
-  
-</section>
-
- </footer>
- 
+  <%- include("../partials/footer") %>
 
    <!--<div class="whatsapp">
   <p>Duvidas ?</p>
@@ -369,8 +297,6 @@
   </div>-->
 
      
-
- </footer>
 
  <script src="/js/home.js"></script>
  <script src="/js/menu_hamburguer.js"></script>
